--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,17 +2,16 @@
     height: 100vh;
 }
 
-/*.off-canvas-menu {*/
-/*    position: fixed;*/
-/*    top: 0;*/
-/*    right: -100%;*/
-/*    width: 300px;*/
-/*    height: 100%;*/
-/*    background: white;*/
-/*    transition: right 0.3s ease;*/
-/*    box-shadow: -2px 0 5px rgba(0,0,0,0.5);*/
-/*}*/
+body, html {
+    background-color: #1f1f1f;
+}
 
-/*.off-canvas-menu.open {*/
-/*    right: 0;*/
-/*}*/
+.offcanvas, .leaflet-popup-content-wrapper {
+    background-color: #1f1f1f;
+    color: #c74014;
+}
+
+.card {
+    background-color: #494847;
+    color: #c74014;
+}
